--- a/src/partials/home/about.html
+++ b/src/partials/home/about.html
@@ -1,83 +1,95 @@
 <section class="about" id="about">
   <div class="about__container wide">
-    <div class="about__wrapp">
-      <div class="about__fltr1 no-select" aria-hidden="true">
-        <img src="./img/decor/ambass_fltr.svg" alt="" />
-      </div>
-      <div class="about__fltr2 no-select" aria-hidden="true">
-        <img src="./img/decor/ambass_fltr.svg" alt="" />
-      </div>
-      <div class="about__fltr3 no-select" aria-hidden="true">
-        <img src="./img/decor/hero_fltr1.svg" alt="" />
-      </div>
+    <div class="about__body">
+      <span class="ico-decor no-select">
+        <img src="./img/decor/dec_17.png" alt="" />
+      </span>
 
-      <div class="about__body">
-        <span class="ico-decor no-select">
-          <img src="./img/decor/dec_17.png" alt="" />
-        </span>
+      <div class="about__content">
+        <div class="about__heading">
+          <h2 class="tl2">
+            <span>Про</span> HR Marketing & Employer Branding Conference
+          </h2>
 
-        <div class="about__content">
-          <div class="about__heading">
-            <h2 class="tl2">
-              <span>Про</span> HR Innovation<br />
-              Summit
-            </h2>
-
-            <h3 class="tl3">
-              Профільний захід та EXPO провідних<br />
-              HR Tech рішень в Україні!
-            </h3>
-          </div>
-
-          <ul class="about__list">
-            <li>
-              <span class="no-select">
-                <img src="./img/icons/space_5.svg" alt="" />
-              </span>
-              <h4 class="tl3">Мета</h4>
-              <div class="txt-def">
-                <p>
-                  Метою якого є надання HR спеціалістам та рекрутерам нові AI та
-                  HR Tech інструменти для підвищення ефективності їхньої роботи,
-                  підтримка розвитку HR Tech стартапів в Україні, створення
-                  платформи для живого спілкування та тестування нових HR Tech
-                  рішень “made in Ukraine”.
-                </p>
-              </div>
-            </li>
-            <li>
-              <span class="no-select">
-                <img src="./img/icons/space_6.svg" alt="" />
-              </span>
-              <h4 class="tl3">Для кого?</h4>
-              <div class="txt-def">
-                <p>HRD, HR, Рекрутери, C-Level</p>
-              </div>
-            </li>
-            <li>
-              <span class="no-select">
-                <img src="./img/icons/space_7.svg" alt="" />
-              </span>
-              <h4 class="tl3">Social Impact</h4>
-              <div class="txt-def">
-                <p>
-                  Ми віримо, що українські IT Startups мають великі шанси
-                  отримати визнання на міжнародному ринку. Тому наша мета –
-                  максимально підтримати їх не лише в Україні, а і закордоном
-                  завдяки нашому нетворкінгу.
-                </p>
-              </div>
-            </li>
-          </ul>
-
-          <button
-            type="button"
-            class="btn-def wide cl-bl openModal"
-            data-id="idRegistr"
-          >
-            Зареєструватися
-          </button>
+          <h3 class="tl3">
+            Це перша в Україні практична кейс-конференція з маркетингу на ринку
+            талантів, мета якої:
+          </h3>
         </div>
+
+        <ul class="about__list">
+          <li>
+            <span class="no-select">
+              <img src="./img/icons/about_1.svg" alt="" />
+            </span>
+            <div class="txt-def">
+              <p>
+                Продемонструвати сучасні ефективні підходи до маркетингу на
+                ринку талантів України
+              </p>
+            </div>
+          </li>
+          <li>
+            <span class="no-select">
+              <img src="./img/icons/about_2.svg" alt="" />
+            </span>
+            <div class="txt-def">
+              <p>
+                Показати робочі кейси інших компаній, як створити ефективну
+                Маркетингову стратегію у сфері HR
+              </p>
+            </div>
+          </li>
+          <li>
+            <span class="no-select">
+              <img src="./img/icons/about_3.svg" alt="" />
+            </span>
+            <div class="txt-def">
+              <p>
+                Навчити оцінювати вплив внутрішніх та зовнішніх проєктів на
+                бізнес
+              </p>
+            </div>
+          </li>
+          <li>
+            <span class="no-select">
+              <img src="./img/icons/about_4.svg" alt="" />
+            </span>
+            <div class="txt-def">
+              <p>
+                Навчити отримувати аналітику, а головне — розуміти її результати
+                та основні KPI
+              </p>
+            </div>
+          </li>
+          <li>
+            <span class="no-select">
+              <img src="./img/icons/about_5.svg" alt="" />
+            </span>
+            <div class="txt-def">
+              <p>
+                Надихнути спеціалістів, які працюють з ринком талантів, робити
+                сміливі проєкти як всередині компанії, так і для кандидатів
+              </p>
+            </div>
+          </li>
+          <li>
+            <span class="no-select">
+              <img src="./img/icons/about_6.svg" alt="" />
+            </span>
+            <div class="txt-def">
+              <p>Дати benchmarks, з якими можна себе порівнювати</p>
+            </div>
+          </li>
+        </ul>
+
+        <button
+          type="button"
+          class="btn-def wide openModal"
+          data-id="idRegistr"
+        >
+          Зареєструватися
+        </button>
       </div>
     </div>
   </div>
