--- a/src/css/index/elements.scss
+++ b/src/css/index/elements.scss
@@ -1,3 +1,31 @@
+.sec-group {
+  position: relative;
+}
+.bg-green {
+  background-color: var(--cl);
+}
+.bottom-radius {
+  border-radius: 0 0 4.375rem 4.375rem;
+  padding-bottom: 8rem;
+}
+.top-pseudo {
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    transform: translateY(-99%);
+    width: 100%;
+    height: 7.25rem;
+    background-color: var(--cm);
+  }
+}
+.top-radius {
+  border-radius: 4.375rem 4.375rem 0 0;
+  padding-top: 8rem;
+}
+
 .tl1,
 .tl2,
 .tl3,
