--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,8 +19,9 @@
 @import url('./sections/general/banner.scss');
 
 /* Home */
-@import url('./sections/home/event.scss');
+@import url('./sections/home/hero.scss');
 @import url('./sections/home/about.scss');
+@import url('./sections/home/useful.scss');
 @import url('./sections/home/commit.scss');
 @import url('./sections/home/speaker.scss');
 @import url('./sections/home/summit.scss');
