--- a/src/css/sections/home/connect.scss
+++ b/src/css/sections/home/connect.scss
@@ -1,8 +1,11 @@
 .connect {
   position: relative;
   padding-top: 6.625rem;
+  margin-bottom: -0.0625rem;
 
   &__heading {
+    position: relative;
+    z-index: 10;
     margin-bottom: -2.6875rem;
   }
 
@@ -94,7 +97,7 @@
 
   &__fltr1 {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     left: -16.3125rem;
     bottom: -17.3125rem;
     width: 42.625rem;
@@ -105,7 +108,7 @@
   }
   &__fltr2 {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 100%;
     top: 0;
@@ -222,7 +225,7 @@
       filter: blur(4.0637rem);
     }
     &__fltr2 {
-      z-index: -2;
+      z-index: 2;
       display: none;
 
       &.fltr-mob {
