--- a/src/css/sections/home/commit.scss
+++ b/src/css/sections/home/commit.scss
@@ -1,5 +1,10 @@
 .commit {
-  padding-top: 6.375rem;
+  position: relative;
+  z-index: 10;
+  padding: 8rem 0;
+  border-radius: 4.375rem;
+  background-color: var(--cw);
+  box-shadow: 0 4rem 8.375rem 0 rgba(0, 0, 0, 0.1);
 
   &__heading {
     margin-bottom: 3.5625rem;
@@ -9,7 +14,6 @@
     font-weight: 600;
     font-size: 10.1875rem;
     line-height: 0.79755;
-    color: var(--cg);
   }
 
   &__list {
@@ -29,19 +33,19 @@
       }
     }
   }
+
   &__item {
-    color: var(--cw);
     flex-direction: column;
     flex: 1 1 auto;
     gap: 1.0625rem 0;
     width: 100%;
-    max-width: calc((100% - 3 * 1.875rem) / 4);
+    max-width: calc((100% - 4 * 1.875rem) / 5);
 
     display: none;
     opacity: 0;
     visibility: hidden;
     transition: all 0.15s ease-in;
-    &:nth-child(-n + 8) {
+    &:nth-child(-n + 5) {
       display: flex;
       opacity: 1;
       visibility: visible;
@@ -58,6 +62,10 @@
     border-radius: 1rem;
     overflow: hidden;
   }
+  &__activity {
+    font-size: 0.875rem;
+    line-height: 1.35714;
+  }
   &__link {
     flex: 0 1 auto;
     margin-top: auto;
@@ -68,7 +76,6 @@
     line-height: 1.3;
     text-decoration: underline;
     text-decoration-skip-ink: none;
-    color: var(--cy);
     width: fit-content;
     &:hover {
       text-decoration: underline;
@@ -82,49 +89,27 @@
     }
   }
 
-  &__activity {
-    font-size: 0.875rem;
-    line-height: 1.35714;
+  .addMore {
+    margin: 3.9375rem auto 0 auto;
   }
+
   &__desc,
   &__soc {
     display: none;
-  }
-
-  &__pagin {
-    display: flex;
-    justify-content: center;
-    margin-top: 2.3906rem;
-    .addMore {
-      display: block;
-      width: fit-content;
-      color: var(--cy);
-      font-weight: 700;
-      font-size: 0.9375rem;
-      line-height: 1.53333;
-      text-align: center;
-      padding: 0.7188rem 2rem;
-      border: 0.0625rem solid var(--cy);
-      background-color: transparent;
-      border-radius: 0.75rem;
-      transition: all 0.15s ease-in;
-      &:hover {
-        background-color: var(--cm);
-        border-color: transparent;
-      }
-    }
   }
 }
 
 @media screen and (max-width: 960px) {
   .commit {
-    padding-top: 4.375rem;
+    border-radius: 0.9375rem;
+    padding: 1.25rem 0 1.875rem 0;
+    box-shadow: none;
 
     &__heading {
       br {
         display: none;
       }
-      margin-bottom: 1.75rem;
+      margin-bottom: 2.5rem;
     }
     &__tl {
       font-size: 2.8125rem;
@@ -135,10 +120,9 @@
       gap: 1.875rem;
     }
     &__item {
-      gap: 0.625rem 0;
       max-width: calc((100% - 1 * 1.875rem) / 2);
 
-      &:nth-child(-n + 8) {
+      &:nth-child(-n + 5) {
         display: none;
         opacity: 0;
         visibility: hidden;
@@ -150,7 +134,10 @@
       }
     }
     &__box {
-      gap: 0.625rem 0;
+      .tl4 {
+        font-size: 1.75rem;
+        line-height: 1.1;
+      }
     }
 
     &__link {
@@ -158,14 +145,8 @@
       line-height: 1.44444;
     }
 
-    &__pagin {
-      margin-top: 1.875rem;
-      .addMore {
-        width: 100%;
-        max-width: 18.125rem;
-        padding: 0.75rem 1.5625rem;
-        border-radius: 0.5rem;
-      }
+    .addMore {
+      margin: 2.5rem auto 0 auto;
     }
   }
 }
