--- a/src/partials/policy/policy.html
+++ b/src/partials/policy/policy.html
@@ -11,7 +11,7 @@
         <img src="./img/decor/hero_fltr1.svg" alt="" />
       </div>
       <div class="policy__fltr4 no-select" aria-hidden="true">
-        <img src="./img/decor/comm_fltr.svg" alt="" />
+        <img src="./img/decor/fltr_circle2.svg" alt="" />
       </div>
 
       <div class="policy__body">
@@ -67,7 +67,7 @@
                 Employer Branding.
               </li>
               <li>
-                Користувач – особа, яка замовила та здійснила оплату Послуг. 
+                Користувач – особа, яка замовила та здійснила оплату Послуг.
               </li>
               <li>
                 Послуги – надання Користувачу доступу до Спільноти та Контенту,
