--- a/src/css/index/elements.scss
+++ b/src/css/index/elements.scss
@@ -4,6 +4,10 @@
 .bg-green {
   background-color: var(--cl);
 }
+.top-radius {
+  border-radius: 4.375rem 4.375rem 0 0;
+  padding-top: 8rem;
+}
 .bottom-radius {
   border-radius: 0 0 4.375rem 4.375rem;
   padding-bottom: 8rem;
@@ -18,12 +22,8 @@
     transform: translateY(-99%);
     width: 100%;
     height: 7.25rem;
-    background-color: var(--cm);
+    background-color: var(--cl);
   }
-}
-.top-radius {
-  border-radius: 4.375rem 4.375rem 0 0;
-  padding-top: 8rem;
 }
 
 .tl1,
@@ -83,8 +83,8 @@
   transition: all 0.15s ease-in;
   &:hover {
     color: var(--cy);
-    background-color: var(--cb);
-    border-color: var(--cb);
+    background-color: var(--cm);
+    border-color: var(--cm);
   }
   &.alt {
     font-size: 0.9375rem;
@@ -96,21 +96,22 @@
     padding: 1.4375rem 3.9375rem;
   }
   &.trnspr {
-    color: var(--cb);
+    color: var(--cm);
     background-color: transparent;
-    border-color: var(--cb);
+    border-color: var(--cm);
     &:hover {
-      color: var(--cw);
+      color: var(--cy);
+      background-color: var(--cm);
     }
   }
   &.bg-yell {
     background-color: var(--cy);
     border-color: var(--cy);
-    color: var(--cb);
+    color: var(--cm);
     &:hover {
-      color: var(--cw);
-      border-color: var(--cb);
-      border-color: var(--cb);
+      color: var(--cy);
+      border-color: var(--cm);
+      background-color: var(--cm);
     }
   }
 }
@@ -134,6 +135,16 @@
 }
 
 @media screen and (max-width: 960px) {
+  .bottom-radius {
+    border-radius: 0 0 0.9375rem 0.9375rem;
+    padding-bottom: 1.875rem;
+  }
+  .top-pseudo {
+    &::before {
+      height: 1.75rem;
+    }
+  }
+
   .tl1 {
     font-size: 4.5625rem;
     line-height: normal;
