--- a/src/partials/header/parts/navmenu.html
+++ b/src/partials/header/parts/navmenu.html
@@ -5,7 +5,7 @@
         <a href="#about">Про івент</a>
       </li>
       <li class="menu-item"><a href="#speaker">Спікери</a></li>
-      <li class="menu-item"><a href="#summit">Програма</a></li>
+      <li class="menu-item"><a href="#program">Програма</a></li>
       <li class="menu-item"><a href="#tickets">Квитки</a></li>
       <li class="menu-item"><a href="#contacts">Контакти</a></li>
     </ul>
