--- a/src/partials/home/case.html
+++ b/src/partials/home/case.html
@@ -5,6 +5,12 @@
         <img src="./img/decor/dec_1.png" alt="" />
       </div>
 
+      <div class="connect__fltr2" aria-hidden="true">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
       <div class="case__body">
         <div class="case__content">
           <h2 class="tl2">Бажаєш подати свій кейс на конференцію?</h2>
