--- a/src/partials/home/program.html
+++ b/src/partials/home/program.html
@@ -1,13 +1,13 @@
-<section class="summit" id="summit">
-  <div class="summit__container wide">
-    <div class="summit__body">
+<section class="program" id="program">
+  <div class="program__container wide">
+    <div class="program__body">
       <span class="ico-decor no-select">
         <img src="./img/decor/dec_15.png" alt="" />
       </span>
 
-      <div class="summit__content">
-        <div class="summit__heading">
-          <p class="summit__subtl">Програма</p>
+      <div class="program__content">
+        <div class="program__heading">
+          <p class="program__subtl">Програма</p>
 
           <h2 class="tl2">
             HR Innovation<br />
@@ -15,30 +15,30 @@
           </h2>
         </div>
 
-        <ul class="summit__list">
+        <ul class="program__list">
           <li
-            class="summit__item"
+            class="program__item calendar"
             data-time="15:00 - 16:00"
             data-title="Ми віримо, що українські IT Startups мають великі шанси отримати визнання на міжнародному ринку. Тому наша мета - максимально підтримати їх не лише в Україні"
             data-speakers="Спікери: Elizaveta Qweentessa (Managing Director/ HR Operations Director Ukraine at Luxoft, A DXC Technology Company), Elizaveta Qweentessa (Managing Director/ HR Operations Director Ukraine at Luxoft, A DXC Technology Company)."
           >
-            <div class="summit__time">
+            <div class="program__time">
               <p>15:00 - 16:00</p>
             </div>
 
-            <div class="summit__info">
+            <div class="program__info">
               <h3>
                 Ми віримо, що українські IT Startups мають великі шанси отримати
                 визнання на міжнародному ринку. Тому наша мета - максимально
                 підтримати їх не лише в Україні
               </h3>
 
-              <ul class="summit__persons">
-                <li class="summit__pers">
-                  <span class="summit__ava ibg">
+              <ul class="program__persons">
+                <li class="program__pers">
+                  <span class="program__ava ibg">
                     <img src="./img/content/ambass_1.jpg" alt="" />
                   </span>
-                  <div class="summit__position">
+                  <div class="program__position">
                     <h4>Elizaveta Qweentessa</h4>
                     <p>
                       Managing Director/ HR Operations Director Ukraine at
@@ -46,11 +46,11 @@
                     </p>
                   </div>
                 </li>
-                <li class="summit__pers">
-                  <span class="summit__ava ibg">
+                <li class="program__pers">
+                  <span class="program__ava ibg">
                     <img src="./img/content/ambass_2.jpg" alt="" />
                   </span>
-                  <div class="summit__position">
+                  <div class="program__position">
                     <h4>Elizaveta Qweentessa</h4>
                     <p>
                       Managing Director/ HR Operations Director Ukraine at
@@ -67,28 +67,28 @@
           </li>
 
           <li
-            class="summit__item"
+            class="program__item calendar"
             data-time="14:00 - 17:00"
             data-title="Ми віримо, що українські IT Startups мають великі шанси отримати визнання на міжнародному ринку. Тому наша мета - максимально підтримати їх не лише в Україні"
             data-speakers="Спікери: Elizaveta Qweentessa (Managing Director/ HR Operations Director Ukraine at Luxoft, A DXC Technology Company)."
           >
-            <div class="summit__time">
+            <div class="program__time">
               <p>14:00 - 17:00</p>
             </div>
 
-            <div class="summit__info">
+            <div class="program__info">
               <h3>
                 Ми віримо, що українські IT Startups мають великі шанси отримати
                 визнання на міжнародному ринку. Тому наша мета - максимально
                 підтримати їх не лише в Україні
               </h3>
 
-              <ul class="summit__persons">
-                <li class="summit__pers">
-                  <span class="summit__ava ibg">
+              <ul class="program__persons">
+                <li class="program__pers">
+                  <span class="program__ava ibg">
                     <img src="./img/content/ambass_3.jpg" alt="" />
                   </span>
-                  <div class="summit__position">
+                  <div class="program__position">
                     <h4>Elizaveta Qweentessa</h4>
                     <p>
                       Managing Director/ HR Operations Director Ukraine at
@@ -105,16 +105,16 @@
           </li>
 
           <li
-            class="summit__item"
+            class="program__item calendar"
             data-time="10:00 - 11:00"
             data-title="Coffee-break"
           >
-            <div class="summit__time">
+            <div class="program__time">
               <p>10:00 - 11:00</p>
             </div>
 
-            <div class="summit__info">
-              <div class="summit__break">
+            <div class="program__info">
+              <div class="program__break">
                 <span>
                   <img src="./img/icons/break.svg" alt="" />
                 </span>
@@ -128,15 +128,15 @@
           </li>
 
           <li
-            class="summit__item"
+            class="program__item calendar"
             data-time="11:00 - 12:00"
             data-title="Ми віримо, що українські IT Startups мають великі шанси отримати визнання на міжнародному ринку. Тому наша мета - максимально підтримати їх не лише в Україні"
           >
-            <div class="summit__time">
+            <div class="program__time">
               <p>11:00 - 12:00</p>
             </div>
 
-            <div class="summit__info">
+            <div class="program__info">
               <h3>
                 Ми віримо, що українські IT Startups мають великі шанси отримати
                 визнання на міжнародному ринку. Тому наша мета - максимально
