--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,7 +25,7 @@
 @import url('./sections/home/commit.scss');
 @import url('./sections/home/speaker.scss');
 @import url('./sections/home/case.scss');
-@import url('./sections/home/summit.scss');
+@import url('./sections/home/program.scss');
 @import url('./sections/home/gallery.scss');
 @import url('./sections/home/connect.scss');
 
