add program fix

--- a/src/partials/home/program.html
+++ b/src/partials/home/program.html
@@ -16,12 +16,17 @@
         </div>
 
         <ul class="program__list">
-          <li
-            class="program__item calendar"
-            data-time="15:00 - 16:00"
-            data-title="Ми віримо, що українські IT Startups мають великі шанси отримати визнання на міжнародному ринку. Тому наша мета - максимально підтримати їх не лише в Україні"
-            data-speakers="Спікери: Elizaveta Qweentessa (Managing Director/ HR Operations Director Ukraine at Luxoft, A DXC Technology Company), Elizaveta Qweentessa (Managing Director/ HR Operations Director Ukraine at Luxoft, A DXC Technology Company)."
-          >
+          <li class="program__item">
+            <div class="program__time">
+              <p>11:00 - 12:00</p>
+            </div>
+
+            <div class="program__info">
+              <h3>Реєстрація та welcome coffee</h3>
+            </div>
+          </li>
+
+          <li class="program__item">
             <div class="program__time">
               <p>15:00 - 16:00</p>
             </div>
@@ -36,7 +41,7 @@
               <ul class="program__persons">
                 <li class="program__pers">
                   <span class="program__ava ibg">
-                    <img src="./img/content/ambass_1.jpg" alt="" />
+                    <img src="./img/content/commit_1.jpg" alt="" />
                   </span>
                   <div class="program__position">
                     <h4>Elizaveta Qweentessa</h4>
@@ -48,7 +53,19 @@
                 </li>
                 <li class="program__pers">
                   <span class="program__ava ibg">
-                    <img src="./img/content/ambass_2.jpg" alt="" />
+                    <img src="./img/content/commit_2.jpg" alt="" />
+                  </span>
+                  <div class="program__position">
+                    <h4>Elizaveta Qweentessa</h4>
+                    <p>
+                      Managing Director/ HR Operations Director Ukraine at
+                      Luxoft, A DXC Technology Company
+                    </p>
+                  </div>
+                </li>
+                <li class="program__pers">
+                  <span class="program__ava ibg">
+                    <img src="./img/content/commit_2.jpg" alt="" />
                   </span>
                   <div class="program__position">
                     <h4>Elizaveta Qweentessa</h4>
@@ -60,33 +77,22 @@
                 </li>
               </ul>
             </div>
-
-            <button type="button" class="btn-def trnspr addCalendar">
-              Додати в календар
-            </button>
           </li>
 
-          <li
-            class="program__item calendar"
-            data-time="14:00 - 17:00"
-            data-title="Ми віримо, що українські IT Startups мають великі шанси отримати визнання на міжнародному ринку. Тому наша мета - максимально підтримати їх не лише в Україні"
-            data-speakers="Спікери: Elizaveta Qweentessa (Managing Director/ HR Operations Director Ukraine at Luxoft, A DXC Technology Company)."
-          >
+          <li class="program__item">
             <div class="program__time">
               <p>14:00 - 17:00</p>
             </div>
 
             <div class="program__info">
               <h3>
-                Ми віримо, що українські IT Startups мають великі шанси отримати
-                визнання на міжнародному ринку. Тому наша мета - максимально
-                підтримати їх не лише в Україні
+                Вітальне слово від представника локації компанії SoftServe
               </h3>
 
               <ul class="program__persons">
                 <li class="program__pers">
                   <span class="program__ava ibg">
-                    <img src="./img/content/ambass_3.jpg" alt="" />
+                    <img src="./img/content/commit_1.jpg" alt="" />
                   </span>
                   <div class="program__position">
                     <h4>Elizaveta Qweentessa</h4>
@@ -98,17 +104,9 @@
                 </li>
               </ul>
             </div>
-
-            <button type="button" class="btn-def trnspr addCalendar">
-              Додати в календар
-            </button>
           </li>
 
-          <li
-            class="program__item calendar"
-            data-time="10:00 - 11:00"
-            data-title="Coffee-break"
-          >
+          <li class="program__item">
             <div class="program__time">
               <p>10:00 - 11:00</p>
             </div>
@@ -121,19 +119,11 @@
                 <h3>Coffee-break</h3>
               </div>
             </div>
-
-            <button type="button" class="btn-def trnspr addCalendar">
-              Додати в календар
-            </button>
           </li>
 
-          <li
-            class="program__item calendar"
-            data-time="11:00 - 12:00"
-            data-title="Ми віримо, що українські IT Startups мають великі шанси отримати визнання на міжнародному ринку. Тому наша мета - максимально підтримати їх не лише в Україні"
-          >
+          <li class="program__item">
             <div class="program__time">
-              <p>11:00 - 12:00</p>
+              <p>15:00 - 16:00</p>
             </div>
 
             <div class="program__info">
@@ -142,21 +132,63 @@
                 визнання на міжнародному ринку. Тому наша мета - максимально
                 підтримати їх не лише в Україні
               </h3>
-            </div>
 
-            <button type="button" class="btn-def trnspr addCalendar">
-              Додати в календар
-            </button>
+              <ul class="program__items">
+                <li>Аналітика HRtech інвестицій у світі</li>
+                <li>У які продуктові рішення інвестують найбільше</li>
+                <li>
+                  Інвестиційні тренди, які повинні бути враховані українським
+                  HRtech
+                </li>
+                <li>
+                  Нескінченний потік відгуків: Які кандидати стали більше
+                  відгукуватись, на скільки більше. Тренд на зменшення кількості
+                  відгуків останній рік. Як ним управляти за допомогою
+                  інструментів джина.
+                </li>
+              </ul>
+
+              <ul class="program__persons">
+                <li class="program__pers">
+                  <span class="program__ava ibg">
+                    <img src="./img/content/commit_1.jpg" alt="" />
+                  </span>
+                  <div class="program__position">
+                    <h4>Elizaveta Qweentessa</h4>
+                    <p>
+                      Managing Director/ HR Operations Director Ukraine at
+                      Luxoft, A DXC Technology Company
+                    </p>
+                  </div>
+                </li>
+                <li class="program__pers">
+                  <span class="program__ava ibg">
+                    <img src="./img/content/commit_2.jpg" alt="" />
+                  </span>
+                  <div class="program__position">
+                    <h4>Elizaveta Qweentessa</h4>
+                    <p>
+                      Managing Director/ HR Operations Director Ukraine at
+                      Luxoft, A DXC Technology Company
+                    </p>
+                  </div>
+                </li>
+                <li class="program__pers">
+                  <span class="program__ava ibg">
+                    <img src="./img/content/commit_2.jpg" alt="" />
+                  </span>
+                  <div class="program__position">
+                    <h4>Elizaveta Qweentessa</h4>
+                    <p>
+                      Managing Director/ HR Operations Director Ukraine at
+                      Luxoft, A DXC Technology Company
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
-
-        <button
-          type="button"
-          class="btn-def wide openModal"
-          data-id="idRegistr"
-        >
-          Зареєструватися
-        </button>
       </div>
     </div>
   </div>
