--- a/src/css/sections/home/program.scss
+++ b/src/css/sections/home/program.scss
@@ -1,7 +1,7 @@
 .program {
   position: relative;
   z-index: 20;
-  padding-top: 9.1875rem;
+  padding: 9.1875rem 0 9.8125rem 0;
 
   &__body {
     position: relative;
@@ -11,20 +11,18 @@
     background-color: var(--cw);
   }
 
-  &__content {
-    display: flex;
-    flex-direction: column;
-    gap: 1.875rem 0;
+  &__heading {
+    margin-bottom: 2.9375rem;
   }
   &__subtl {
     font-size: 2.5rem;
     line-height: 1.275;
-    margin-bottom: 1.875rem;
+    margin-bottom: 2.9375rem;
   }
 
   &__item {
     display: grid;
-    grid-template-columns: 7.5rem 1fr auto;
+    grid-template-columns: 7.5rem 1fr 14.1875rem;
     gap: 0 2.5rem;
     align-items: start;
     padding: 1.875rem 0;
@@ -32,7 +30,12 @@
 
     & > .btn-def {
       border-radius: 1rem;
-      padding: 1.0625rem 2.4375rem;
+      padding: 1.0625rem;
+      width: 100%;
+      max-width: 14.1875rem;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
@@ -44,9 +47,28 @@
     display: flex;
     flex-direction: column;
     gap: 0.9375rem 0;
-    & > h3 {
+    & > h2,
+    & > h3,
+    & > h4 {
       font-size: 1.25rem;
       line-height: 1.3;
+    }
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+    gap: 0.9375rem 0;
+    li {
+      position: relative;
+      padding-left: 1.5625rem;
+      &::before {
+        content: "◆";
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: var(--cl);
+      }
     }
   }
 
@@ -60,10 +82,13 @@
     align-items: center;
     gap: 0 1rem;
     padding: 0.625rem;
-    background-color: var(--cw);
+    background-color: var(--cw2);
     border-radius: 0.75rem;
-    flex: 1 1 auto;
-    flex-basis: calc((100% - 1 * 0.625rem) / 2);
+    width: 100%;
+    max-width: calc((100% - 1 * 0.625rem) / 2);
+    &:last-child:nth-child(odd) {
+      max-width: 100%;
+    }
   }
   &__ava {
     flex-shrink: 0;
@@ -77,7 +102,9 @@
     display: flex;
     flex-direction: column;
     gap: 0.25rem 0;
-    h4 {
+    h3,
+    h4,
+    h5 {
       font-size: 1.125rem;
       line-height: 1.33333;
     }
@@ -98,7 +125,9 @@
         width: 100%;
       }
     }
-    & > h3 {
+    & > h2,
+    & > h3,
+    & > h4 {
       font-size: 1.25rem;
       line-height: 1.3;
     }
@@ -107,39 +136,35 @@
 
 @media screen and (max-width: 960px) {
   .program {
-    padding-top: 4.875rem;
+    padding: 3.875rem 0 1.125rem 0;
 
     &__container {
       padding: 0;
     }
     &__body {
-      padding: 3.125rem 0.9375rem 1.875rem 0.9375rem;
+      padding: 2.8125rem 0.9375rem 3.4375rem 0.9375rem;
       border-radius: 0.9375rem;
     }
 
-    &__content {
-      & > .btn-def {
-        margin: 0 auto;
-        width: 100%;
-        max-width: 18.125rem;
-      }
-    }
     &__heading {
       br {
         display: none;
       }
+      margin-bottom: 1.25rem;
+      .tl2 {
+        font-size: 1.375rem;
+        line-height: 1.04;
+      }
     }
-
     &__subtl {
-      font-size: 0.875rem;
-      line-height: 1.5;
-      margin-bottom: 0;
+      font-size: 2.25rem;
+      line-height: 1.41;
+      margin-bottom: 1.25rem;
     }
 
     &__item {
       gap: 0.625rem;
       grid-template-columns: 1fr auto;
-      padding: 1.25rem 0;
 
       & > .btn-def {
         border-radius: 0.75rem;
@@ -158,39 +183,44 @@
     }
 
     &__time {
-      font-size: 0.875rem;
-      line-height: 1.5;
+      font-size: 1.125rem;
+      line-height: 1.44;
     }
     &__info {
-      & > h3 {
-        font-size: 0.875rem;
-        line-height: 1.35714;
+      & > h2,
+      & > h3,
+      & > h4 {
+        font-size: 1.125rem;
+        line-height: 1.44;
       }
     }
 
-    &__persons {
-      flex-direction: column;
-      flex-wrap: nowrap;
+    &__items {
+      li {
+        padding-left: 1.5rem;
+        font-size: 0.875rem;
+      }
     }
+
     &__pers {
       border-radius: 0.5rem;
-      flex-basis: 100%;
+      max-width: 100%;
     }
     &__position {
-      h4 {
+      h3,
+      h4,
+      h5 {
         font-size: 1rem;
         line-height: 1.5;
-      }
-      p {
-        font-size: 0.6875rem;
-        line-height: 1.45455;
       }
     }
 
     &__break {
-      & > h3 {
-        font-size: 0.875rem;
-        line-height: 1.35714;
+      & > h2,
+      & > h3,
+      & > h4 {
+        font-size: 1.125rem;
+        line-height: 1.44;
       }
     }
   }
