--- a/src/css/index/icons.scss
+++ b/src/css/index/icons.scss
@@ -20,4 +20,6 @@ body {
   --checkPlan: url("data:image/svg+xml,%3Csvg width='14' height='12' viewBox='0 0 14 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.25 2.7832L5.25 9.21675L1.75 5.99997' stroke='%23F4FD19' stroke-width='2' stroke-linecap='round' /%3E%3C/svg%3E");
 
   --arrowMore: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='13' viewBox='0 0 13 13' fill='none'%3E%3Cpath d='M6.77083 11.7783L12.1875 6.33978M6.77084 0.901238L12.1875 6.33978M12.1875 6.33978L0.8125 6.33978' stroke='%23222222' stroke-linecap='square'/%3E%3C/svg%3E");
+
+  --ticket: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M4.5 5H11.5M4.5 8H8M4.93236 12.7471L7.50386 14.2165C7.81129 14.3922 8.18871 14.3922 8.49614 14.2165L11.0676 12.7471C11.3399 12.5915 11.6694 12.5726 11.9577 12.6962L13.6061 13.4026C14.2659 13.6854 15 13.2014 15 12.4835V2C15 1.44772 14.5523 1 14 1H2C1.44772 1 1 1.44772 1 2V12.4835C1 13.2014 1.73405 13.6854 2.39392 13.4026L4.0423 12.6962C4.33055 12.5726 4.66006 12.5915 4.93236 12.7471Z' stroke='%23222222' stroke-width='2'/%3E%3C/svg%3E");
 }
