--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,6 +26,7 @@
 @import url('./sections/home/speaker.scss');
 @import url('./sections/home/case.scss');
 @import url('./sections/home/program.scss');
+@import url('./sections/home/tickets.scss');
 @import url('./sections/home/gallery.scss');
 @import url('./sections/home/connect.scss');
 
