--- a/src/partials/home/program.html
+++ b/src/partials/home/program.html
@@ -9,10 +9,7 @@
         <div class="program__heading">
           <p class="program__subtl">Програма</p>
 
-          <h2 class="tl2">
-            HR Innovation<br />
-            Summit
-          </h2>
+          <h2 class="tl2">HR Marketing & Employer Branding Conference</h2>
         </div>
 
         <ul class="program__list">
