--- a/src/partials/thank/thank.html
+++ b/src/partials/thank/thank.html
@@ -1,36 +1,33 @@
 <section class="thank">
-  <div class="thank__container">
-    <div class="thank__heading">
-      <h1 class="thank__tl">Thank you!</h1>
-    </div>
+  <div class="hero__video">
+    <!-- autoplay -->
+    <video muted loop preload="metadata" poster="./img/content/bg_hero.jpg">
+      <source src="./img/media/event_mp4.mp4" type="video/mp4" />
+      <source src="./img/media/event_webm.webm" type="video/webm" />
+    </video>
   </div>
+
   <div class="thank__container wide">
     <div class="thank__wrapp">
+      <div class="thank__heading">
+        <h1 class="thank__tl">Дякуємо!</h1>
+      </div>
+
       <div class="thank__body">
-        <div class="txt-def cw">
-          <p>
-            Thank you for registering. We will contact you within 2 hours during
-            business hours.
-          </p>
+        <div class="txt-def">
+          <p>Ми зв’яжемось з вами протягом 2 робочих годин</p>
         </div>
-        <h2 class="tl3 cw">Would you like to make a payment now?</h2>
+        <h2 class="tl3">Бажаєте оплатити замовлення зараз?</h2>
         <div class="thank__btns">
-          <a href="./index.html" class="btn-def">Go to Payment</a>
-          <a href="./index.html" class="btn-def trnspr">Return to Main Page</a>
+          <a href="./index.html" class="btn-def">Оплатити зараз</a>
+          <a href="./index.html" class="btn-def trnspr">
+            Повернутися на головну
+          </a>
         </div>
 
         <div class="thank__img no-select" aria-hidden="true">
           <img src="./img/decor/dec_17.png" alt="" />
         </div>
-      </div>
-
-      <div class="contacts__fltr1 no-select" aria-hidden="true">
-        <img src="./img/decor/cont_fltr1.svg" alt="" />
-      </div>
-      <div class="contacts__fltr2" aria-hidden="true">
-        <div></div>
-        <div></div>
-        <div></div>
       </div>
     </div>
   </div>
