--- a/src/css/sections/header/header.scss
+++ b/src/css/sections/header/header.scss
@@ -1,3 +1,11 @@
+body {
+  &.header-style {
+    .header__main {
+      background-color: var(--cu);
+    }
+  }
+}
+
 .header {
   position: sticky;
   top: 0;
