--- a/src/partials/home/connect.html
+++ b/src/partials/home/connect.html
@@ -28,7 +28,7 @@
           <address class="connect__address">
             <div class="connect__logo">
               <p>Організатор</p>
-              <a href="./index.html" class="custom-logo-link">
+              <a href="./index.html">
                 <img src="./img/icons/logo.svg" alt="Logo" />
               </a>
             </div>
