--- a/src/css/sections/footer/footer.scss
+++ b/src/css/sections/footer/footer.scss
@@ -9,8 +9,7 @@ body {
       &__head {
         .custom-logo-link {
           img {
-            filter: brightness(0) saturate(100%) invert(9%) sepia(27%)
-              saturate(0%) hue-rotate(254deg) brightness(95%) contrast(89%);
+            filter: none;
           }
         }
       }
@@ -86,6 +85,8 @@ body {
       width: 5.5625rem;
       img {
         width: 100%;
+        filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%)
+          hue-rotate(310deg) brightness(102%) contrast(105%);
       }
     }
   }
