--- a/src/partials/success/success.html
+++ b/src/partials/success/success.html
@@ -1,9 +1,8 @@
 <section class="success thank">
   <div class="hero__video">
-    <!-- autoplay -->
-    <video muted loop preload="metadata" poster="./img/content/bg_hero.jpg">
-      <source src="./img/media/event_mp4.mp4" type="video/mp4" />
-      <source src="./img/media/event_webm.webm" type="video/webm" />
+    <video autoplay muted loop preload="metadata">
+      <source src="./img/media/hero_mp4.mp4" type="video/mp4" />
+      <source src="./img/media/hero_webm.webm" type="video/webm" />
     </video>
   </div>
 
