fix evidn modal

--- a/src/partials/modals/evidence.html
+++ b/src/partials/modals/evidence.html
@@ -4,6 +4,7 @@
       <div class="evidence__ava ibg">
         <img src="" alt="" />
       </div>
+
       <button
         type="button"
         class="modal__close closeModal"
@@ -12,12 +13,13 @@
 
       <div class="evidence__wrapp">
         <h2 class="evidence__tl"></h2>
+
         <div class="evidence__activity">
           <p></p>
         </div>
-        <div class="txt-def">
-          <p></p>
-        </div>
+
+        <div class="evidence__desc"></div>
+
         <div class="evidence__box">
           <div class="evidence__soc">
             <ul>
