--- a/src/css/sections/modals/evidence.scss
+++ b/src/css/sections/modals/evidence.scss
@@ -68,6 +68,73 @@
     }
   }
 
+  &__desc {
+    & > * {
+      margin-top: 0.375rem;
+
+      &:first-child {
+        margin-top: 0;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    a {
+      text-decoration: underline !important;
+      text-underline-position: under;
+      text-decoration-thickness: 1px !important;
+    }
+
+    b,
+    strong {
+      font-weight: 600;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-weight: 600;
+      font-size: 1.125rem;
+      font-weight: 700;
+      line-height: 1.33;
+      margin-top: 0.75rem;
+      margin-bottom: 0.375rem;
+    }
+
+    ul {
+      margin-left: 0.75rem;
+
+      li {
+        margin-bottom: 0.5rem;
+        margin-left: 0.5rem;
+        list-style: disc;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    ol {
+      padding-left: 1.25rem;
+      margin-left: 0;
+
+      li {
+        margin-bottom: 0.5rem;
+        list-style: decimal;
+        margin-left: 0;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
   .modal {
     &__body {
       padding-left: 8.125rem;
@@ -116,10 +183,6 @@
           }
         }
       }
-    }
-
-    .txt-def {
-      font-size: 1rem;
     }
 
     .modal {
