--- a/src/css/sections/home/commit.scss
+++ b/src/css/sections/home/commit.scss
@@ -75,6 +75,7 @@
     line-height: 1.3;
     text-decoration: underline;
     text-decoration-skip-ink: none;
+    text-underline-position: from-font;
     width: fit-content;
     &:hover {
       text-decoration: underline;
