--- a/src/partials/home/hero.html
+++ b/src/partials/home/hero.html
@@ -8,12 +8,13 @@
 
   <div class="hero__container">
     <div class="hero__body">
-      <p class="hero__subtl">Перша кейс-конференція для HR та рекрутерів</p>
+      <p class="hero__sub">ІV кейс-конференція</p>
       <h1 class="hero__tl">
         HR Marketing &<br />
         Employer Branding<br />
         Conference
       </h1>
+      <h2 class="hero__subtl">Кейси, що впливають та надихають</h2>
 
       <div class="hero__content">
         <div class="hero__info">
@@ -39,15 +40,6 @@
           Зареєструватися
         </button>
       </div>
-
-      <ul class="hero__partners">
-        <li class="no-select">
-          <img src="./img/content/partner_1.png" alt="" />
-        </li>
-        <li class="no-select">
-          <img src="./img/content/partner_2.png" alt="" />
-        </li>
-      </ul>
     </div>
   </div>
 </section>
