--- a/src/css/sections/home/about.scss
+++ b/src/css/sections/home/about.scss
@@ -1,7 +1,7 @@
 .about {
   position: relative;
   z-index: 20;
-  padding-top: 8.3125rem;
+  padding-top: 5.4375rem;
 
   &__body {
     position: relative;
@@ -12,7 +12,7 @@
     box-shadow: 0 4rem 8.375rem 0 rgba(0, 0, 0, 0.1);
   }
 
-  &__content {
+  &__main {
     padding-left: 10.5rem;
   }
   &__heading {
@@ -58,9 +58,67 @@
   }
 }
 
+.about__content {
+  display: grid;
+  grid-template-columns: 18.125rem 1fr;
+  align-items: start;
+  gap: 0 2.375rem;
+}
+.about-card {
+  display: flex;
+  flex-direction: column;
+  gap: 1.0625rem 0;
+
+  .tl3 {
+    line-height: 1.08;
+  }
+  .commit__img {
+    padding-top: 95.5%;
+  }
+}
+
+.about__article {
+  .article-hook {
+    display: block;
+    width: 3.625rem;
+    margin-bottom: 1.875rem;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  & > div {
+    & > * {
+      margin-top: 1.0625rem;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+
+    h3,
+    h4 {
+      font-family: var(--ff2);
+      font-size: 2rem;
+      font-weight: 400;
+      line-height: 1.21;
+      margin: 1.875rem 0;
+    }
+    p {
+      font-size: 0.9375rem;
+      line-height: 1.52;
+    }
+  }
+
+  & > .btn-def {
+    margin-top: 2.5rem;
+  }
+}
+
 @media screen and (max-width: 960px) {
   .about {
-    padding-top: 1.75rem;
+    padding-top: 0.625rem;
 
     &__container {
       padding: 0;
@@ -71,7 +129,7 @@
       box-shadow: none;
     }
 
-    &__content {
+    &__main {
       padding-left: 0;
     }
     &__heading {
@@ -109,6 +167,68 @@
           line-height: 1.5;
         }
       }
+    }
+  }
+
+  .about__content {
+    grid-template-columns: auto;
+    gap: 1.25rem 0;
+  }
+  .about-card {
+    position: relative;
+    padding-left: 5.625rem;
+    gap: 0.625rem 0;
+
+    .tl3 {
+      font-size: 1.375rem;
+      line-height: 1.04;
+    }
+
+    .commit__img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding-top: 0;
+      width: 4.5625rem;
+      height: 4.3125rem;
+      border-radius: 18.75rem;
+    }
+    .commit__link {
+      font-size: 0.75rem;
+      line-height: 1.41;
+      gap: 0 0.625rem;
+
+      span {
+        position: relative;
+        top: 0.0625rem;
+        width: 0.75rem;
+      }
+    }
+  }
+
+  .about__article {
+    .article-hook {
+      display: none;
+    }
+
+    & > div {
+      & > * {
+        margin-top: 0.875rem;
+      }
+
+      h3,
+      h4 {
+        font-size: 1.375rem;
+        line-height: 1.04;
+        margin: 0.625rem 0;
+      }
+      p {
+        line-height: 1.33;
+      }
+    }
+
+    & > .btn-def {
+      margin-top: 1.25rem;
     }
   }
 }
